<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="app_name">Sticker fy</string>
<!--    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>-->
<!--    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>-->
<!--    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>-->
<!--    <string name="character_counter_pattern">%1$d / %2$d</string>-->
<!--    <string name="com.crashlytics.android.build_id">0b8ff1e6-e15a-4a9a-a362-ea030aa693c6</string>-->
<!--    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>-->
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
<!--    <string name="default_web_client_id">645180455357-gmoc1kb164h1u23nts6ogose4ha5gpha.apps.googleusercontent.com</string>-->
    <string name="delete_pack">Delete Pack</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="dot">•</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack</string>
    <string name="error_message">Error: %s \10See logcat for stack trace.</string>
<!--    <string name="error_message">Error %s 10See logcat for stack trace.</string>-->
<!--    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>-->
<!--    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>-->
<!--    <string name="firebase_database_url">https://createsticker-9265c.firebaseio.com</string>-->
<!--    <string name="gcm_defaultSenderId">645180455357</string>-->
<!--    <string name="google_api_key">AIzaSyAYPpeZ5EfkjYxMo9nIhAAH-cgaRbRwetw</string>-->
<!--    <string name="google_app_id">1:645180455357:android:e41f1b2649d52127c67ad4</string>-->
<!--    <string name="google_crash_reporting_api_key">AIzaSyAYPpeZ5EfkjYxMo9nIhAAH-cgaRbRwetw</string>-->
<!--    <string name="google_storage_bucket">createsticker-9265c.appspot.com</string>-->
<!--    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>-->
    <string name="image_chooser_message">Choose an image to cut</string>
    <string name="image_description">Image</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="intro_label">Quick look</string>
    <string name="intro_magic_description">Use the Magic Wand tool and touch parts of the background you want to erase</string>
    <string name="intro_magic_title">Automatic background clearing</string>
    <string name="intro_manual_description">Use the Pencil tool to erase the background dragging your finger around the screen</string>
    <string name="intro_manual_title">Manual background clearing</string>
    <string name="intro_zoom_description">Use the Magnifier tool to Zoom in/out so you can make better cuts</string>
    <string name="intro_zoom_title">Zooming and Moving the picture</string>
    <string name="more_info_button">More info about sticker pack</string>
<!--    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>-->
    <string name="password_toggle_content_description">Show password</string>
<!--    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>-->
<!--    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>-->
<!--    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>-->
<!--    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>-->
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="privacy_policy">Privacy policy</string>
<!--    <string name="project_id">createsticker-9265c</string>-->
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="send_email">Send email</string>
    <string name="share_button_content_description">Share sticker pack to other users</string>
    <string name="share_pack">Share Pack</string>
<!--    <string name="status_bar_notification_info_overflow">999+</string>-->
<!--    <string name="test_ad_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="title_activity_sticker_packs_list">StickerMaker</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="view_webpage">View webpage</string>
</resources>
