<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_forward"
            android:rotation="180"
            android:tint="@color/white" />

        <com.sticker.app.github.gabrielbb.cutout.test.utils.TextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:padding="3sp"
            android:text="STICKER PACK INFO"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#dbdada" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tray_icon"
            style="@style/InfoButtonStyle"
            android:clickable="false"
            android:text="@string/info_screen_tray_icon"
            android:textColor="#b9b9b9" />

        <TextView
            android:id="@+id/view_webpage"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/sticker_3rdparty_web"
            android:drawableLeft="@drawable/sticker_3rdparty_web"
            android:text="@string/view_webpage" />

        <TextView
            android:id="@+id/send_email"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/sticker_3rdparty_email"
            android:drawableLeft="@drawable/sticker_3rdparty_email"
            android:text="@string/send_email" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/sticker_3rdparty_privacy"
            android:drawableLeft="@drawable/sticker_3rdparty_privacy"
            android:text="@string/privacy_policy" />

        <TextView
            android:id="@+id/license_agreement"
            style="@style/InfoButtonStyle" />
    </LinearLayout>
</LinearLayout>
