<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_forward"
            android:tint="@color/white" />

        <com.sticker.app.github.gabrielbb.cutout.test.utils.TextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:padding="3sp"
            android:text="STICKER DETAILS"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_forward"
            android:tint="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginBottom="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tray_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/tray_image_content_description"
            android:src="@drawable/im_photoview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">

            <com.sticker.app.github.gabrielbb.cutout.test.utils.CustomeTextView
                android:id="@+id/pack_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/pack_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/add_to_whatsapp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/btn_orange_round"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:src="@drawable/ic_watsapp" />

                <com.sticker.app.github.gabrielbb.cutout.test.utils.TextViewButton
                    android:id="@+id/tvWhattAppAdd"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Add to Whats App"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAlreadyAdded"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/btn_orange_round"
                android:orientation="horizontal"
                android:padding="@dimen/_3sdp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/shape_circle" />

                    <ImageView
                        android:layout_width="@dimen/_13sdp"
                        android:layout_height="@dimen/_13sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>

                <com.sticker.app.github.gabrielbb.cutout.test.utils.TextViewButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Added to whats app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="#d6d5d5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.sticker.app.github.gabrielbb.cutout.test.static_icon.BottomFadingRecyclerView
                android:id="@+id/sticker_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fadingEdgeLength="@dimen/_5sdp"
               android:padding="@dimen/_10sdp"
                android:requiresFadingEdge="vertical" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="#000000"
                android:visibility="invisible" />
        </FrameLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
      android:layout_margin="@dimen/_10sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/already_added_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/details_pack_already_added"
            android:textColor="#9b9b9b"
            android:textSize="14sp"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivWhatapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sticker_3rdparty_wa" />

                <TextView
                    style="@style/StickerPreviewButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/ivWhatapp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:foreground="@android:color/transparent"
                    android:text="@string/add_to_whatsapp" />
            </RelativeLayout>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>
